Deleted files & folders can be restored by using the "/file recover <Deleted file> <Restore path>" command.